--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.2",
+    "bs-custom-file-input": "^1.3.4",
     "cloudinary": "^1.40.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
